자수 페이지수정 및 마무리 단계

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SewingMachine</string>
+    <string name="app_name">큐브 미싱기</string>
 
 
     <string name="action_connect">Connect</string>
